[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_mc33926"
version = "0.0.1"
authors = [
  { name="", email="email@example.com" },
]
description = "Library for the Pololu Dual MC33926 Motor using rgpio"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'rgpio',
]

[project.urls]
"Homepage" = "https://github.com/Clam-/dual-mc33926"
"Bug Tracker" = "https://github.com/Clam-/dual-mc33926/issues"
